manifests/apps/kubewall/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubewall
  namespace: kubewall
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubewall
      app.kubernetes.io/name: kubewall
  serviceName: kubewall
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kubewall
        app.kubernetes.io/name: kubewall
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
      - name: kubeconfig
        secret:
          secretName: kubeconfig
          defaultMode: 0444
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: kubewall
        image: ghcr.io/kubewall/kubewall:0.0.11
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: kubeconfig
          mountPath: /.kubewall/kubeconfigs
          readOnly: true
        resources:
          requests:
            cpu: 25m
            memory: 75Mi
          limits:
            # cpu: 300m
            memory: 600Mi        
        ports:
        - containerPort: 7080
          name: http
          protocol: TCP
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
