manifests/apps/kubewall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubewall
  namespace: kubewall
  annotations:
    omni-kube-service-exposer.sidero.dev/prefix: kubewall
    omni-kube-service-exposer.sidero.dev/port: "50103"
    omni-kube-service-exposer.sidero.dev/label: Kubewall
    omni-kube-service-exposer.sidero.dev/icon: |
      H4sICBZjEGcAA2t1YmV3YWxsLWxvZ28tZGFyay5zdmcA7VZNbxs3EP0rxObSHkhxhuSQDCwDKYrC
[...]
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 7080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: kubewall
    app.kubernetes.io/name: kubewall
  sessionAffinity: None
  type: ClusterIP
