manifests/apps/kubewall/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubewall
  namespace: kubewall
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "kubewall.ucdialplans.com"
  rules:
  - backendRefs:
    - name: kubewall
      namespace: kubewall
      kind: Service
      port: 7080
